dropshot/tests/fail/bad_trait_endpoint17.stderr
error[E0277]: the trait bound `dropshot::TypedBody<Stuff>: SharedExtractor` is not satisfied
  --> tests/fail/bad_trait_endpoint17.rs:27:5
   |
27 |     #[endpoint {
   |     ^ the trait `SharedExtractor` is not implemented for `dropshot::TypedBody<Stuff>`
   |
help: the following other types implement trait `SharedExtractor`
   |
  ::: src/extractor/path.rs
   |
   | / impl<PathType> SharedExtractor for Path<PathType>
   | | where
   | |     PathType: DeserializeOwned + JsonSchema + Send + Sync + 'static,
   | |____________________________________________________________________^ `dropshot::Path<PathType>`
   |
  ::: src/extractor/query.rs
   |
   | / impl<QueryType> SharedExtractor for Query<QueryType>
   | | where
   | |     QueryType: JsonSchema + DeserializeOwned + Send + Sync + 'static,
   | |_____________________________________________________________________^ `dropshot::Query<QueryType>`
  --> src/extractor/header.rs
   |
   | / impl<HeaderType> SharedExtractor for Header<HeaderType>
   | | where
   | |     HeaderType: JsonSchema + DeserializeOwned + Send + Sync + 'static,
   | |______________________________________________________________________^ `dropshot::Header<HeaderType>`
   = note: required for `(dropshot::TypedBody<Stuff>, dropshot::UntypedBody)` to implement `dropshot::extractor::common::RequestExtractor`
note: required by a bound in `ApiEndpoint::<StubContext>::new_for_types`
  --> src/api_description.rs
   |
   |     pub fn new_for_types<FuncParams, ResultType>(
   |            ------------- required by a bound in this associated function
...
   |         FuncParams: RequestExtractor + 'static,
   |                     ^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_for_types`

error[E0277]: the trait bound `fn(RequestContext<<ServerImpl as MyApi>::Context>, dropshot::TypedBody<Stuff>, dropshot::UntypedBody) -> impl Future<Output = Result<dropshot::HttpResponseUpdatedNoContent, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::two_exclusive_extractors}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_trait_endpoint17.rs:27:5
   |
23 |   #[dropshot::api_description]
   |   ---------------------------- required by a bound introduced by this call
...
27 | /     #[endpoint {
28 | |         method = GET,
29 | |         path = "/test",
30 | |     }]
31 | |     async fn two_exclusive_extractors(
   | |_____________________________________^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyApi>::Context>, dropshot::TypedBody<Stuff>, dropshot::UntypedBody) -> impl Future<Output = Result<dropshot::HttpResponseUpdatedNoContent, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::two_exclusive_extractors}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
